--- a/css/midterm.css
+++ b/css/midterm.css
@@ -17,18 +17,18 @@ h1, h2, h3{
 h1{
 	font-size: 3.6rem;	
 	font-family: 'Redressed', cursive;
-	text-shadow: 4px 4px 4px #272E30;
+	text-shadow: 3px 3px 3px #272E30;
 }
 h2{
 	font-size: 3.0rem;	
-	font-family: 'Tangerine', serif;
-	text-shadow: 4px 4px 4px #272E30;
+	font-family: 'Josefin Slab', serif;
+	text-shadow: 1px 1px 1px #272E30;
 	color: #1B2021;
 }
 h3{
 	font-size: 2.4rem;
-	font-family: 'Tangerine', serif;
-	text-shadow: 4px 4px 4px #272E30;
+	font-family: 'Josefin Slab', serif;
+	text-shadow: 1px 1px 1px #272E30;
 	color: #1B2021;	
 }
 p, li, a{
@@ -104,7 +104,7 @@ a{
 	text-decoration: none;
 	color: #1B2021;
 	font-weight: 7;
-	text-shadow: 4px 4px 4px #272E30; /* #B0B0B0 */  ;
+	text-shadow: 1px 1px 1px #272E30; /* #B0B0B0 */  ;
 }
 .navbar a:visited,
 .navbar a:hover,
